# KatanaRecomp

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  KatanaRecomp_Encoding_Reparatur.ps1  KatanaRecomp_Meilenstein3_Kontrollfluss.ps1  KatanaRecomp_Meilenstein4_BasicBlocks.ps1  KatanaRecomp_Meilenstein5_Funktionsanalyse.ps1  KatanaRecomp_UTF8_Fix.ps1  README.md  ROADMAP.md  THIRD_PARTY_NOTICES.md
.github/workflows/: build-matrix.yml  ci.yml
.katana_backup_control_flow_20260713_194941/: CMakeLists.txt
.katana_backup_encoding_20260713_195540/: CMakeLists.txt
.katana_backup_functions_20260713_200230/: CMakeLists.txt
.katana_backup_utf8_20260713_195325/: CMakeLists.txt
.katana_backup_utf8_20260713_195325/src/cli/: main.cpp
assets/gui/: ASSET_PROVENANCE.md  asset-manifest.json
cmake/: KatanaRecompConfig.cmake.in  KatanaVersions.cmake
docs/: ABI_VALUE_ANALYSIS.md  AICA_ARM7.md  BIOS_ABI.md  CODEX_HANDOFF.md  CODE_QUALITY.md  CODE_REVIEW_2026-07-17.md  CONTROL_FLOW_FRONTIER.md  CONTROL_FLOW_HARNESS_GUI_REVIEW_2026-07-18.md  CONTROL_FLOW_SOUNDNESS.md  COVERAGE.md  CRASH_REPORTS.md  DEBUG_GATE.md  DIFFERENTIAL_EXECUTION.md  DISPATCH_DIAGNOSTICS.md  DMA.md  EXECUTABLE_IMAGES.md  EXECUTABLE_INVENTORY_AND_MODULES.md  FIRMWARE_DIAGNOSTICS.md  FPU_CONFORMANCE.md  FUZZING.md  GDI.md  GRAPH_EXPORT.md  GUEST_TIMING.md  GUEST_WRITES.md  GUI_ASSET_INTAKE.md  HOST_RUNTIME.md  HOST_VIDEO.md  INDIRECT_CONTROL_FLOW.md  INITIAL_SNAPSHOT_CONTRACT.md  INPUT_PROVENANCE.md  IR_OPTIMIZATIONS.md  JSON_REPORTS.md  KATANA_IR.md  MEDIA_CLOCK.md  MUTABLE_STORAGE_AND_PACING.md  OBJECT_POINTS_TO.md  P1_BUILD_GRAPH.md  P1_DISC_IO.md  P1_HOTPATHS.md  P1_INCREMENTAL_ANALYSIS.md  (+44 more)
docs/architecture/: firmware-modes.md
docs/releases/: v0.11.0.md  v0.12.0.md  v0.13.0.md  v0.14.0.md  v0.15.0.md  v0.16.0.md  v0.17.0.md  v0.18.0.md  v0.19.0.md  v0.20.0.md  v0.21.0.md  v0.22.0.md  v0.23.0.md  v0.24.0.md  v0.25.0.md  v0.26.0.md  v0.27.0.md  v0.28.0.md  v0.29.0.md  v0.30.0.md  v0.31.0.md  v0.32.0.md  v0.33.0.md  v0.34.0-preparation.md  v0.34.0.md  v0.37.0.md
include/katana/: build_contract.hpp.in
src/analysis/: analysis_index.cpp  analysis_overrides.cpp  basic_blocks.cpp  code_address.cpp  control_flow_analysis.cpp  control_flow_report.cpp  disassembler.cpp  evidence.cpp  executable_inventory.cpp  function_analysis.cpp  function_value_analysis.cpp  graph_export.cpp  hardware_audit.cpp  jump_table_analysis.cpp  recursive_analysis.cpp  runtime_code_copy_analysis.cpp  symbol_names.cpp  value_analysis.cpp
src/app/: application.cpp
src/cli/: main.cpp
src/codegen/: backend.cpp  cache.cpp  cpp_emitter.cpp  latent_aot_registry.cpp  metadata.cpp  naming.cpp  partition.cpp  port_export.cpp  probe.cpp  project.cpp  source_map.cpp
src/decoder/: decoder.cpp  decoder_validation.cpp  instruction_metadata.cpp  isa_coverage.cpp
src/gui/: katana-recomp-gui.rc  main.cpp  model.cpp
src/gui/dialog/: CMakeLists.txt  file_dialog_win32.cpp
src/io/: binary_reader.cpp  elf32_sh_loader.cpp  executable_image.cpp  input_provenance.cpp  json_report.cpp  project_manifest.cpp  raw_binary_loader.cpp  symbol_map.cpp
src/ir/: accumulator_effect.cpp  lower.cpp  memory_effect.cpp  operand_width.cpp  optimize.cpp  serialize.cpp  status_effect.cpp  verifier.cpp
src/phase9/: homebrew.cpp  performance.cpp
src/platform/: dreamcast.cpp  dreamcast_disc.cpp  firmware_diagnostics.cpp  firmware_profile.cpp  phase6_gate.cpp
src/runtime/: aica.cpp  bios_abi.cpp  block_abi.cpp  block_dispatch.cpp  block_guards.cpp  block_table.cpp  cache_control.cpp  code_invalidation.cpp  controlled_fallback.cpp  crash_report.cpp  disc.cpp  disc_install.cpp  disc_load_transaction.cpp  dispatch_diagnostics.cpp  dma.cpp  dreamcast_boot.cpp  dreamcast_memory.cpp  dynamic_interpreter.cpp  exception.cpp  executable_modules.cpp  firmware_handoff.cpp  fpu.cpp  gdi.cpp  gdrom_controller.cpp  guest_program_range.cpp  holly_dma.cpp  host_input.cpp  host_runtime.cpp  host_video.cpp  indirect_dispatch.cpp  interpreter_boundary.cpp  interrupt.cpp  io_port.cpp  iso9660.cpp  maple.cpp  maple_mmio.cpp  media_clock.cpp  memory.cpp  mmu_control.cpp  native_aot_template.cpp  (+16 more)
src/testing/: differential_execution.cpp
tests/alu/: alpha_integer_program_writer.cpp  and_or_xor_tests.cpp  carry_overflow_tests.cpp  cmp_variants_tests.cpp  division_tests.cpp  double_multiplication_tests.cpp  dt_movt_tests.cpp  dynamic_shift_tests.cpp  extend_swap_xtrct_tests.cpp  fixed_shift_tests.cpp  generated_alpha_integer_tests.cpp  generated_and_or_xor_tests.cpp  generated_carry_overflow_tests.cpp  generated_cmp_variants_tests.cpp  generated_division_tests.cpp  generated_double_multiplication_tests.cpp  generated_dt_movt_tests.cpp  generated_dynamic_shift_tests.cpp  generated_extend_swap_xtrct_tests.cpp  generated_fixed_shift_tests.cpp  generated_mac_tests.cpp  generated_one_bit_shift_tests.cpp  generated_rotation_tests.cpp  generated_simple_multiplication_tests.cpp  generated_sub_neg_not_tests.cpp  mac_tests.cpp  one_bit_shift_tests.cpp  rotation_tests.cpp  simple_multiplication_tests.cpp  sub_neg_not_tests.cpp
tests/analysis/: analysis_overrides_tests.cpp  control_flow_analysis_tests.cpp  control_flow_cli_fixture_writer.cpp  executable_inventory_tests.cpp  function_value_analysis_tests.cpp  graph_export_tests.cpp  hardware_audit_tests.cpp  jump_table_analysis_tests.cpp  recursive_analysis_tests.cpp  runtime_code_copy_analysis_tests.cpp  value_analysis_tests.cpp  verify_control_flow_cli.cmake
tests/basic_blocks/: basic_block_tests.cpp
tests/cli/: hardware_audit_policy_tests.cpp
tests/cmake/: check_cli_input_paths.cmake  check_ir_cli.cmake  check_optimization_cli.cmake
tests/codegen/: backend_capability_tests.cpp  backend_tests.cpp  cache_tests.cpp  cpp_backend_tests.cpp  cpp_emitter_tests.cpp  delay_slot_program_writer.cpp  generated_delay_slot_tests.cpp  generated_execution_tests.cpp  generated_memory_tests.cpp  (+9 more)
tools/: decoder_fuzzer.cpp  generate_v014_fixtures.py  next-roadmap-task.ps1  release-version.ps1  run_phase6_gate.ps1
(+281 files in other folders)
